# nepi_edge_sdk_link

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_license_headers.sh  rsync_workspace_to_target.sh
examples/: examples_env.sh
examples/c/: nepi_sdk_example_session.c
examples/c/nepi_sdk_example_filesys/lb/cfg/: dev_cfg_1.json
examples/c/nepi_sdk_example_filesys/lb/dt-msg/: dev_dt_msg_1.json  general_dt_1.json
examples/example_files/: hb_execution_status.json  lb_execution_status.json  left_img_detections.txt
examples/nepi_sdk_example_filesys/cfg/bot/: config.json
examples/nepi_sdk_example_filesys/lb/cfg/: dev_cfg_2.json
examples/nepi_sdk_example_filesys/lb/dt-msg/: dev_dt_msg_2.json
examples/nepi_sdk_example_filesys/log/: hb_execution_status.json  lb_execution_status.json
examples/python/: nepi_sdk_example_session.py
impl_c/: nepi_edge_sdk_impl.c  nepi_edge_sdk_impl.h  nepi_edge_sdk_link_impl.c  nepi_edge_sdk_link_impl.h  nepi_hb_interface_impl.c  nepi_lb_interface_impl.c  nepi_lb_interface_impl.h
include/: nepi_edge_errors.h  nepi_edge_hb_consts.h  nepi_edge_hb_interface.h  nepi_edge_lb_consts.h  nepi_edge_lb_interface.h  nepi_edge_sdk.h  nepi_edge_sdk_link.h
python/: nepi_edge_sdk.py  nepi_edge_sdk_link.py
